-Agregar la funcionalidad: "Al presionar el botón “Guardar”, se debe crear una nueva instancia de Plato, para lo cual previamente deberá definir la clase Plato, junto con su constructor, getters y setters." -Hay que agregar la toolbar en las pantallas secundarias?

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         <activity android:name=".MainActivity"
             android:label="SignUp">
         </activity>
+        <activity android:name=".NuevoPlato"
+            android:label="SignUp">
+        </activity>
 
         <activity android:name=".Home">
             <intent-filter>
