Se agregó toolbar en lista de platos y se creo una nueva interfaz de usuario (sin validaciones ni funcionalidades)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,10 @@
         <activity
             android:name=".NuevoPlate"
             android:label="SignUp" />
+        <activity
+            android:name=".PedidoActivity"
+            android:label="SignUp" />
+
         <activity android:name=".Home">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
