Se agregaron notificaciones. Falta validar nuevo pedido

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.ActivityPlateRecycler"></activity>
+
+
+        <activity android:name=".activity.ActivityPlateRecycler" />
         <activity
             android:name=".activity.ActivityRegistrarUsuario"
             android:label="SignUp" />
@@ -29,6 +31,5 @@
             </intent-filter>
         </activity>
     </application>
-    
 
 </manifest>
