--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,12 @@ dependencies {
     //annotationProcessor "androidx.room:room-compiler:2.2.5"
     compile 'com.android.support:multidex:1.0.0'
 
+    // Utilities for Maps SDK for Android (requires Google Play Services)
+    implementation 'com.google.maps.android:android-maps-utils:2.1.0'
+
+    // Alternately - Utilities for Maps SDK v3 BETA for Android (does not require Google Play Services)
+  //  implementation 'com.google.maps.android:android-maps-utils-v3:2.1.0'
+
     implementation "androidx.room:room-runtime:2.2.5"
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     annotationProcessor "androidx.room:room-compiler:2.2.5"
