--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 30
-    buildToolsVersion '30.0.2'
+    buildToolsVersion '30.0.3'
 
     defaultConfig {
         applicationId "SendMeal.app"
@@ -34,7 +35,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.android.material:material:1.3.0'
 
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
@@ -43,18 +44,20 @@ dependencies {
 
     //implementation "androidx.room:room-runtime:2.2.5"
     //annotationProcessor "androidx.room:room-compiler:2.2.5"
-    compile 'com.android.support:multidex:1.0.0'
+    implementation 'com.android.support:multidex:1.0.3'
 
     // Utilities for Maps SDK for Android (requires Google Play Services)
-    implementation 'com.google.maps.android:android-maps-utils:2.1.0'
+    implementation 'com.google.maps.android:android-maps-utils:2.2.0'
 
     // Alternately - Utilities for Maps SDK v3 BETA for Android (does not require Google Play Services)
   //  implementation 'com.google.maps.android:android-maps-utils-v3:2.1.0'
 
-    implementation "androidx.room:room-runtime:2.2.5"
+    implementation "androidx.room:room-runtime:2.2.6"
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
-    annotationProcessor "androidx.room:room-compiler:2.2.5"
-    androidTestImplementation "androidx.room:room-testing:2.2.5"
+    implementation 'com.google.firebase:firebase-storage:19.2.1'
+    implementation 'com.google.firebase:firebase-auth:20.0.2'
+    annotationProcessor "androidx.room:room-compiler:2.2.6"
+    androidTestImplementation "androidx.room:room-testing:2.2.6"
 
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -63,7 +66,7 @@ dependencies {
 
     //PARA TEST UNITARIOS
 
-    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'junit:junit:4.13.2'
     // Optional -- Robolectric environment
     testImplementation 'androidx.test:core:1.3.0'
     testImplementation 'androidx.test:core:1.3.0'
@@ -74,7 +77,7 @@ dependencies {
     //room
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
 
-    androidTestImplementation 'junit:junit:4.13.1'
+    androidTestImplementation 'junit:junit:4.13.2'
 
     // Core library
     androidTestImplementation 'androidx.test:core:1.3.0'
@@ -86,12 +89,12 @@ dependencies {
     // Assertions
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.ext:truth:1.3.0'
-    androidTestImplementation 'com.google.truth:truth:1.0'
+    androidTestImplementation 'com.google.truth:truth:1.1.2'
 
     // Espresso dependencies
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    testImplementation 'org.robolectric:robolectric:4.4'
+    testImplementation 'org.robolectric:robolectric:4.5.1'
 
 
 
