--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,14 +23,6 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
 
-        <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/.
-        -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
@@ -38,7 +30,7 @@
         <activity
             android:name="app.activity.ActivityMap"
             android:label="@string/title_activity_maps" />
-        <activity android:name="app.activity.ActivityPlateRecycler" />
+        <activity android:name="app.activity.ActivityPlatos" />
         <activity
             android:name="app.activity.ActivityRegistrarUsuario"
             android:label="SignUp" />
