--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,11 @@ android {
     compileSdkVersion 30
     buildToolsVersion '30.0.3'
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     defaultConfig {
         applicationId "SendMeal.app"
         minSdkVersion 26
@@ -36,68 +41,25 @@ dependencies {
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.3.0'
-
-    //noinspection GradleCompatible
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    //noinspection GradleCompatible
-    implementation 'com.android.support:support-core-utils:28.0.0'
-
-    //implementation "androidx.room:room-runtime:2.2.5"
-    //annotationProcessor "androidx.room:room-compiler:2.2.5"
     implementation 'com.android.support:multidex:1.0.3'
 
-    // Utilities for Maps SDK for Android (requires Google Play Services)
+    //ROOM
+    implementation "androidx.room:room-runtime:2.2.6"
+    annotationProcessor "androidx.room:room-compiler:2.2.6"
+    androidTestImplementation "androidx.room:room-testing:2.2.6"
+
+    //MAPS
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.maps.android:android-maps-utils:2.2.0'
 
-    // Alternately - Utilities for Maps SDK v3 BETA for Android (does not require Google Play Services)
-  //  implementation 'com.google.maps.android:android-maps-utils-v3:2.1.0'
-
-    implementation "androidx.room:room-runtime:2.2.6"
-    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    //FIREBASE
     implementation 'com.google.firebase:firebase-storage:19.2.1'
     implementation 'com.google.firebase:firebase-auth:20.0.2'
     implementation 'com.google.firebase:firebase-database:19.6.0'
     implementation 'com.google.firebase:firebase-messaging:21.0.1'
-    annotationProcessor "androidx.room:room-compiler:2.2.6"
-    androidTestImplementation "androidx.room:room-testing:2.2.6"
 
-
+    //REST-API
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-
-
-    //PARA TEST UNITARIOS
-
-    testImplementation 'junit:junit:4.13.2'
-    // Optional -- Robolectric environment
-    testImplementation 'androidx.test:core:1.3.0'
-    testImplementation 'androidx.test:core:1.3.0'
-    // Optional -- Mockito framework
-    testImplementation 'org.mockito:mockito-core:2.19.0'
-
-
-    //room
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-
-    androidTestImplementation 'junit:junit:4.13.2'
-
-    // Core library
-    androidTestImplementation 'androidx.test:core:1.3.0'
-
-    // AndroidJUnitRunner and JUnit Rules
-    androidTestImplementation 'androidx.test:runner:1.3.0'
-    androidTestImplementation 'androidx.test:rules:1.3.0'
-
-    // Assertions
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.ext:truth:1.3.0'
-    androidTestImplementation 'com.google.truth:truth:1.1.2'
-
-    // Espresso dependencies
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
-    testImplementation 'org.robolectric:robolectric:4.5.1'
-
-
 
 }
